--- a/themes/artshare/css/editor.css
+++ b/themes/artshare/css/editor.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:regular,bold);
+@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:regular,bold);
 
-@import url(http://fonts.googleapis.com/css?family=Josefin+Sans+Std+Light);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans+Std+Light);
 
 .typography blockquote.front li h4 {
 	padding: 0 0 3px 0;
